Add route pattern call
Added the ability to get data from the pattern API to create a list of points which are stops. Data is not received by Watch yet.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
             "inbox_size",
             "route_color_r",
             "route_color_g",
-            "route_color_b"
+            "route_color_b",
+            "stop_name",
+            "stop_type",
+            "stop_lat",
+            "stop_long"
         ],
         "projectType": "native",
         "resources": {
