Move route type resolution
Route type codes are now set on the phone in JS instead of forwarding the whole group string to the watch for proccessing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
             "jsStatus",
             "request",
             "route_name",
-            "route_group",
+            "route_type",
             "route_short_name",
             "inbox_size",
             "route_color_r",
