--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
             "stop_type",
             "stop_x",
             "stop_y",
-            "list_len",
-            "route_index"
+            "list_len"
         ],
         "projectType": "native",
         "resources": {
